--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "nasaproject",
-  "version": "1.0.0",
-  "description": "Nasa project backend",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "csv-parse": "^5.3.6"
-  }
+	"name": "nasaproject",
+	"version": "1.0.0",
+	"description": "Nasa project backend",
+	"main": "app.js",
+	"scripts": {
+		"watch": "nodemon app.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"csv-parse": "^5.3.6",
+		"express": "^4.18.2"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.22"
+	}
 }
