--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,15 @@
 	"description": "Nasa project backend",
 	"main": "app.js",
 	"scripts": {
-		"watch": "nodemon app.js"
+		"watch": "nodemon server.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"csv-parse": "^5.3.6",
-		"express": "^4.18.2",
-		"hbs": "^4.2.0"
+		"express": "^4.18.2"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.22"
