automate app,handle logs

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
 	"description": "Nasa project backend",
 	"main": "app.js",
 	"scripts": {
-		"watch": "nodemon server.js"
+		"watch": "nodemon server.js",
+		"start": "node server.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -12,7 +13,8 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"csv-parse": "^5.3.6",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.22"
