--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,26 @@
 {
-	"name": "nasaproject",
-	"version": "1.0.0",
-	"description": "Nasa project backend",
-	"main": "app.js",
-	"scripts": {
-		"watch": "nodemon server.js",
-		"start": "node server.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"cors": "^2.8.5",
-		"csv-parse": "^5.3.6",
-		"express": "^4.18.2",
-		"morgan": "^1.10.0"
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.22"
-	}
+  "name": "nasaproject",
+  "version": "1.0.0",
+  "description": "Nasa project backend",
+  "main": "app.js",
+  "scripts": {
+    "watch": "nodemon server.js",
+    "start": "node server.js",
+    "test": "jest",
+    "watch-test": "jest --watch"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "csv-parse": "^5.3.6",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
+  }
 }
