--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "watch": "nodemon server.js",
     "start": "node server.js",
     "test": "jest",
-    "watch-test": "jest --watch"
+    "watch-test": "jest --watch",
+    "cluster": "pm2 start -i max"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.6",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.3.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
