--- a/backend/package.json
+++ b/backend/package.json
@@ -6,24 +6,27 @@
   "scripts": {
     "watch": "nodemon server.js",
     "start": "node server.js",
-    "test": "jest",
+    "test": "jest --detectOpenHandles --forceExit",
     "watch-test": "jest --watch",
     "cluster": "pm2 start -i max"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^26.6.3",
     "mongoose": "^7.0.5",
     "morgan": "^1.10.0",
     "pm2": "^5.3.0"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   }
